code/gateway-infra-istio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-infra-istio
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-infra-istio
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.example.gateway.istio.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
