code/gateway-infra-kind.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-infra-kind
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-infra-kind
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - name: default
    hostname: "*.example.gateway.kind.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
